--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -69,15 +69,24 @@ jobs:
           terraform_version: 1.7
 
       - name: Terraform Init
-        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIRECTORY }} init -input=false
+        env:
+          BACKEND_RESOURCE_GROUP_NAME: ${{ vars.BACKEND_RESOURCE_GROUP_NAME }}
+          BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.BACKEND_STORAGE_ACCOUNT_NAME }}
+          BACKEND_CONTAINER_NAME: ${{ vars.BACKEND_CONTAINER_NAME }}
+          BACKEND_TF_STATE_FILE_NAME: ${{ vars.BACKEND_TF_STATE_FILE_NAME }}
+        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIRECTORY }} init \
+          -backend-config="resource_group_name=$BACKEND_RESOURCE_GROUP_NAME" \
+          -backend-config="storage_account_name=$BACKEND_STORAGE_ACCOUNT_NAME" \
+          -backend-config="container_name=$BACKEND_CONTAINER_NAME" \
+          -backend-config="key=$BACKEND_TF_STATE_FILE_NAME"
 
       - name: Terraform Plan
-        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIRECTORY }} plan -out=tfplan -input=false
+        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIRECTORY }} plan -out=tfplan
 
       - name: Terraform Apply
         #if: github.ref == 'refs/heads/master' && github.event_name == 'push' && success()
         run: |
-          terraform apply -input=false tfplan
+          terraform apply tfplan
 
           resource_group_name=$(terraform output -raw resource_group_name)
           echo $resource_group_name
