--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -70,6 +70,10 @@ jobs:
 
       - name: Terraform Init
         env:
+          ARM_SUBSCRIPTION_ID: ${{ env.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ env.ARM_TENANT_ID }}
+          ARM_CLIENT_ID: ${{ env.ARM_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ env.ARM_CLIENT_SECRET }}
           BACKEND_RESOURCE_GROUP_NAME: ${{ vars.BACKEND_RESOURCE_GROUP_NAME }}
           BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.BACKEND_STORAGE_ACCOUNT_NAME }}
           BACKEND_CONTAINER_NAME: ${{ vars.BACKEND_CONTAINER_NAME }}
@@ -82,7 +86,7 @@ jobs:
             -backend-config="key=$BACKEND_TF_STATE_FILE_NAME"
 
       - name: Terraform Plan
-        run: terraform -chdir=$TERRAFORM_WORKING_DIRECTORY plan -out=tfplan
+        run: terraform -chdir="${{ env.TERRAFORM_WORKING_DIRECTORY }}" plan -out=tfplan
 
       - name: Terraform Apply
         #if: github.ref == 'refs/heads/master' && github.event_name == 'push' && success()
