--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -70,23 +70,21 @@ jobs:
 
       - name: Terraform Init
         env:
-          ARM_SUBSCRIPTION_ID: ${{ env.ARM_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ env.ARM_TENANT_ID }}
-          ARM_CLIENT_ID: ${{ env.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ env.ARM_CLIENT_SECRET }}
           BACKEND_RESOURCE_GROUP_NAME: ${{ vars.BACKEND_RESOURCE_GROUP_NAME }}
           BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.BACKEND_STORAGE_ACCOUNT_NAME }}
           BACKEND_CONTAINER_NAME: ${{ vars.BACKEND_CONTAINER_NAME }}
           BACKEND_TF_STATE_FILE_NAME: ${{ vars.BACKEND_TF_STATE_FILE_NAME }}
+        working-directory: ${{ env.TERRAFORM_WORKING_DIRECTORY }}
         run: |
-          terraform -chdir="${{ env.TERRAFORM_WORKING_DIRECTORY }}" init \
+          terraform init \
             -backend-config="resource_group_name=$BACKEND_RESOURCE_GROUP_NAME" \
             -backend-config="storage_account_name=$BACKEND_STORAGE_ACCOUNT_NAME" \
             -backend-config="container_name=$BACKEND_CONTAINER_NAME" \
             -backend-config="key=$BACKEND_TF_STATE_FILE_NAME"
 
       - name: Terraform Plan
-        run: terraform -chdir="${{ env.TERRAFORM_WORKING_DIRECTORY }}" plan -out=tfplan
+        working-directory: ${{ env.TERRAFORM_WORKING_DIRECTORY }}
+        run: terraform plan -out=tfplan
 
       - name: Terraform Apply
         #if: github.ref == 'refs/heads/master' && github.event_name == 'push' && success()
