--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -87,6 +87,7 @@ jobs:
         run: terraform plan -out=tfplan
 
       - name: Terraform Apply
+        working-directory: ${{ env.TERRAFORM_WORKING_DIRECTORY }}
         #if: github.ref == 'refs/heads/master' && github.event_name == 'push' && success()
         run: |
           terraform apply tfplan
