--- a/.github/workflows/terraform-dev.yml
+++ b/.github/workflows/terraform-dev.yml
@@ -41,7 +41,7 @@ jobs:
         working-directory: ${{ env.DOTNET_WORKING_DIRECTORY }}
 
       - name: Publish
-        run: dotnet publish PingFunctionApp.csproj -c Release -o ./publish
+        run: dotnet publish **/PingFunctionApp.csproj -c Release -o ./publish
         working-directory: ${{ env.DOTNET_WORKING_DIRECTORY }}
 
       - name: Generate Deployment Package
